# my_app

./: .gitignore  README.md  chat_history.json  main.py  pyproject.toml  requirements.txt
.github/workflows/: android.yml  apk-build.yml  ipa-build.yml  main.yml
Widgets/: Federacion.py  ResponsiveColumn.py  ResponsiveControl.py  ResponsiveRow.py  controls.py  funcs.py
assets/: manifest.json
components/: functions.py  widgets.py
widgets/: BotonTexto.py  BotonesTheme.py  CalculadoraPremio.py  Zoomtainer.py
